# TinyOS

./: .gitignore  CMakeLists.txt  bootasm.S  bootloader.elf  build.bat  debug.bat  linked.ld  main.c  toolchain.cmake
include/: disk.h  fs.h  shell.h  stack.h  types.h  uart.h
src/: disk.c  fs.c  main.c  shell.c  uart.c
src/mem/: stack.c
test_binary/: hello_world.c
